seo and few small additions

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	},
 	"keywords": [],
 	"author": {
-		"name": "Francuski Miroslav",
+		"name": "Franc eMedia",
 		"url": "https://francuskimiroslav.com"
 	},
 	"homepage": "https://francuskimiroslav.github.io/MyPortfolio/",
